# zanmei

./: .gitignore  .projections.json  LICENSE  Makefile  Pipfile  README.md  base.py  book_index.csv  comm.py  hoc5.py  hoctoga.py  lyrics.py  mvccc.py  mvccc_master.pptx  mvccc_slides.py  pyproject.toml  scripture.py  setup.cfg  slides.py  stats.py  thebible.py  zanmei.py
bible/: scripture.py
download/hoctoga/: 108_來讚美.errata.txt  204_主恩更多.errata.txt  238_亞伯拉罕的神.errata.txt  264_快樂歡欣向主敬拜.errata.txt  297_活著為耶穌，真平安.errata.txt  331_祂自己.errata.txt  358_有平安在我心.errata.txt
hymns/: __init__.py  hoc5.py  hoctoga.py  mvccc.py  utils.py  zanmei.py
mvccc/: slides.py  slidesapp.py
processed/hoc5/: 417_祂何等愛你，愛我.errata.txt
processed/hoctoga/: 001_齊來稱頌偉大之神.errata.txt  012_父恩廣大.errata.txt  135_請聽天使在高唱.errata.txt  338_我願常見祢.errata.txt
processed/mvccc/: 001_齊來稱頌偉大之神.pptx  002_你真偉大.pptx  003_晨曦破曉.pptx  005_這是天父世.pptx  006_這是天父世界.pptx  007_你的信實廣大.pptx  012_父恩廣大.pptx  013_慈愛天父.pptx  013_慈愛天父，我心真感激袮.key  013_慈愛天父，我心真感激袮.pptx  014_真神之愛.pptx  015_神愛世人.pptx  016_神聖妙愛.pptx  018_古老福音.pptx  022_耶穌大愛深不可測.pptx  023_我的牧者.pptx  025_如羊需牧人.pptx  026_天父兒女.pptx  030_奇妙聖經.pptx  034_要告訴耶穌.pptx  038_生命之道.pptx  043_安穩港口.pptx  046_天父必看顧你.pptx  047_耶穌是否仍然看顧.pptx  049_我只要信靠我主.pptx  050_有福的確據.pptx  051_我主耶穌，我依靠祢.pptx  053_主是我牧者我必不缺乏.pptx  054_信心使我得勝.pptx  057_信靠耶穌.pptx  059_靠主耶穌得勝.pptx  062_倚靠主永遠膀臂.pptx  063_昨日今日到永遠.pptx  064_信靠耶穌真是甜美.pptx  066_我知誰掌管明天.pptx  068_我為祂活.pptx  069_堅固磐石.pptx  070_永久磐石.pptx  073_每一天所渡過的每一刻.pptx  075_奇異恩典.pptx  (+279 more)
processed/mvccc_choir/: 2019-10-27-聖名榮光.pptx
services/: 2019-03-24.flags  2019-03-31.flags  2019-04-07.flags  2019-04-14.flags  2019-04-21.flags  2019-04-28.flags  2019-05-05.flags  2019-05-12.flags  2019-05-19.flags  2019-05-26.flags  2019-06-02.flags  2019-06-09.flags  2019-06-16.flags  2019-06-23.flags  2019-06-30.flags  2019-07-07.flags  2019-07-14.flags  2019-07-21.flags  2019-11-03.flags  2019-11-10.flags  2019-11-17.flags  2019-11-24.flags  2019-12-01.flags  2019-12-08.flags  2019-12-15.flags  2019-12-22.flags  2020-01-05.flags
tests/: test_scripture.py  test_thebible.py
tests/bible/: test_index.py  test_scripture.py
