[metadata]
name = whatever
version = 0.9.23
summary = Whatever
author = Team
author-email = what@ever.com
home-page = https://github.com/what/ever
description-file = README.rst
requires-python = >=3.6
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python3

# python tools configuration.
[isort]
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 120

# https://github.com/ambv/black#the-black-code-style, A compatible `.isort.cfg`
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[flake8]
max-line-length = 120
# http://flake8.pycqa.org/en/latest/user/error-codes.html
ignore = D,B101,S101

[pycodestyle]
exclude = .venv,.eggs,zold
max-line-length = 120
show-pep8 = false
show-source = true
